[bdist_wheel]
universal = 1

[metadata]
name = eks-rolling-update
version_format = {tag}.{commitcount}+{gitsha}
license = Apache License, Version 2.0
license_file = LICENSE
description = EKS Rolling Update is a utility for updating the launch configuration or template of worker nodes in an
              EKS cluster.
long_description = file: README.md
long_description_content_type = text/markdown
author = Craig Huber, Nicolas Bélanger, Sam Weston & contributors
maintainer = Craig Huber, Nicolas Bélanger, Sam Weston & contributors
url = https://github.com/hellofresh/eks-rolling-update
classifiers =
    Environment :: Console
    Intended Audience :: Developers
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
package_dir =
    core=core
    lib=lib
packages = core,lib
install_requires =
    requests
    boto3 >= 1.9.246
    kubernetes >= 10.0.1
    python-dotenv >= 0.10.2
setup_requires =
    setuptools-git-version
python_requires = >=3.7

[options.entry_points]
console_scripts =
    eks_rolling_update = core.eks_rolling_update:main
